--- a/documentation/latex/structlabyrinth.tex
+++ b/documentation/latex/structlabyrinth.tex
@@ -2,8 +2,12 @@
 \label{structlabyrinth}\index{labyrinth\_t@{labyrinth\_t}}
 
 
-Data structure to represent the labyrinth.  
+Represents the labyrinth.  
 
+
+
+
+{\ttfamily \#include $<$snake.\+h$>$}
 
 \doxysubsection*{Data Fields}
 \begin{DoxyCompactItemize}
@@ -21,7 +25,7 @@ int \mbox{\hyperlink{structlabyrinth_a89da2f830c2a4da66b102ba58818946c}{drill}}
 
 
 \doxysubsection{Detailed Description}
-Data structure to represent the labyrinth. 
+Represents the labyrinth. 
 
 \doxysubsection{Field Documentation}
 \mbox{\Hypertarget{structlabyrinth_a89da2f830c2a4da66b102ba58818946c}\label{structlabyrinth_a89da2f830c2a4da66b102ba58818946c}} 
@@ -30,31 +34,31 @@ Data structure to represent the labyrinth.
 \doxysubsubsection{\texorpdfstring{drill}{drill}}
 {\footnotesize\ttfamily int labyrinth\+\_\+t\+::drill}
 
-\mbox{\Hypertarget{structlabyrinth_a0f9fca78548068ffd8bb4a7460d8bee0}\label{structlabyrinth_a0f9fca78548068ffd8bb4a7460d8bee0}} 
+The number of drills available. \mbox{\Hypertarget{structlabyrinth_a0f9fca78548068ffd8bb4a7460d8bee0}\label{structlabyrinth_a0f9fca78548068ffd8bb4a7460d8bee0}} 
 \index{labyrinth\_t@{labyrinth\_t}!labyrinth\_matrix@{labyrinth\_matrix}}
 \index{labyrinth\_matrix@{labyrinth\_matrix}!labyrinth\_t@{labyrinth\_t}}
 \doxysubsubsection{\texorpdfstring{labyrinth\_matrix}{labyrinth\_matrix}}
 {\footnotesize\ttfamily char$\ast$$\ast$ labyrinth\+\_\+t\+::labyrinth\+\_\+matrix}
 
-\mbox{\Hypertarget{structlabyrinth_a0607947751248ffb245cb463d1e470dc}\label{structlabyrinth_a0607947751248ffb245cb463d1e470dc}} 
+The matrix representing the labyrinth layout. \mbox{\Hypertarget{structlabyrinth_a0607947751248ffb245cb463d1e470dc}\label{structlabyrinth_a0607947751248ffb245cb463d1e470dc}} 
 \index{labyrinth\_t@{labyrinth\_t}!M@{M}}
 \index{M@{M}!labyrinth\_t@{labyrinth\_t}}
 \doxysubsubsection{\texorpdfstring{M}{M}}
 {\footnotesize\ttfamily int labyrinth\+\_\+t\+::M}
 
-\mbox{\Hypertarget{structlabyrinth_a4fddd68e88f981444449ba3dc46c0014}\label{structlabyrinth_a4fddd68e88f981444449ba3dc46c0014}} 
+The width of the labyrinth. \mbox{\Hypertarget{structlabyrinth_a4fddd68e88f981444449ba3dc46c0014}\label{structlabyrinth_a4fddd68e88f981444449ba3dc46c0014}} 
 \index{labyrinth\_t@{labyrinth\_t}!N@{N}}
 \index{N@{N}!labyrinth\_t@{labyrinth\_t}}
 \doxysubsubsection{\texorpdfstring{N}{N}}
 {\footnotesize\ttfamily int labyrinth\+\_\+t\+::N}
 
-\mbox{\Hypertarget{structlabyrinth_afd76e45012bd235bf9e4ec229c86a42b}\label{structlabyrinth_afd76e45012bd235bf9e4ec229c86a42b}} 
+The height of the labyrinth. \mbox{\Hypertarget{structlabyrinth_afd76e45012bd235bf9e4ec229c86a42b}\label{structlabyrinth_afd76e45012bd235bf9e4ec229c86a42b}} 
 \index{labyrinth\_t@{labyrinth\_t}!score@{score}}
 \index{score@{score}!labyrinth\_t@{labyrinth\_t}}
 \doxysubsubsection{\texorpdfstring{score}{score}}
 {\footnotesize\ttfamily int labyrinth\+\_\+t\+::score}
 
-
+The current score of the game. 
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
