--- a/documentation/latex/annotated.tex
+++ b/documentation/latex/annotated.tex
@@ -1,5 +1,5 @@
 \doxysection{Data Structures}
 Here are the data structures with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{structlabyrinth}{labyrinth\+\_\+t}} \\*Data structure to represent the labyrinth }{\pageref{structlabyrinth}}{}
-\item\contentsline{section}{\mbox{\hyperlink{structsnake}{snake\+\_\+t}} \\*Data structure to represent the snake }{\pageref{structsnake}}{}
+\item\contentsline{section}{\mbox{\hyperlink{structlabyrinth}{labyrinth\+\_\+t}} \\*Represents the labyrinth }{\pageref{structlabyrinth}}{}
+\item\contentsline{section}{\mbox{\hyperlink{structsnake}{snake\+\_\+t}} \\*Represents the snake }{\pageref{structsnake}}{}
 \end{DoxyCompactList}
