--- a/documentation/latex/structsnake.tex
+++ b/documentation/latex/structsnake.tex
@@ -2,8 +2,12 @@
 \label{structsnake}\index{snake\_t@{snake\_t}}
 
 
-Data structure to represent the snake.  
+Represents the snake.  
 
+
+
+
+{\ttfamily \#include $<$snake.\+h$>$}
 
 \doxysubsection*{Data Fields}
 \begin{DoxyCompactItemize}
@@ -19,7 +23,7 @@ snake\+\_\+t $\ast$ \mbox{\hyperlink{structsnake_a617a3ab01dd14411a194e9ef3abf5c
 
 
 \doxysubsection{Detailed Description}
-Data structure to represent the snake. 
+Represents the snake. 
 
 \doxysubsection{Field Documentation}
 \mbox{\Hypertarget{structsnake_a1399d232016065ea0906b735715bdc06}\label{structsnake_a1399d232016065ea0906b735715bdc06}} 
@@ -28,25 +32,25 @@ Data structure to represent the snake.
 \doxysubsubsection{\texorpdfstring{head}{head}}
 {\footnotesize\ttfamily char snake\+\_\+t\+::head}
 
-\mbox{\Hypertarget{structsnake_a617a3ab01dd14411a194e9ef3abf5c84}\label{structsnake_a617a3ab01dd14411a194e9ef3abf5c84}} 
+The character representing the snake\textquotesingle{}s head. \mbox{\Hypertarget{structsnake_a617a3ab01dd14411a194e9ef3abf5c84}\label{structsnake_a617a3ab01dd14411a194e9ef3abf5c84}} 
 \index{snake\_t@{snake\_t}!next@{next}}
 \index{next@{next}!snake\_t@{snake\_t}}
 \doxysubsubsection{\texorpdfstring{next}{next}}
 {\footnotesize\ttfamily snake\+\_\+t$\ast$ snake\+\_\+t\+::next}
 
-\mbox{\Hypertarget{structsnake_acd87673b4023e5ee8eef5927eed07ac4}\label{structsnake_acd87673b4023e5ee8eef5927eed07ac4}} 
+Pointer to the next segment of the snake. \mbox{\Hypertarget{structsnake_acd87673b4023e5ee8eef5927eed07ac4}\label{structsnake_acd87673b4023e5ee8eef5927eed07ac4}} 
 \index{snake\_t@{snake\_t}!x\_snake\_pos@{x\_snake\_pos}}
 \index{x\_snake\_pos@{x\_snake\_pos}!snake\_t@{snake\_t}}
 \doxysubsubsection{\texorpdfstring{x\_snake\_pos}{x\_snake\_pos}}
 {\footnotesize\ttfamily int snake\+\_\+t\+::x\+\_\+snake\+\_\+pos}
 
-\mbox{\Hypertarget{structsnake_a0c9c64051e2b17231cfab2815c0c329d}\label{structsnake_a0c9c64051e2b17231cfab2815c0c329d}} 
+The X-\/coordinate of the snake\textquotesingle{}s position. \mbox{\Hypertarget{structsnake_a0c9c64051e2b17231cfab2815c0c329d}\label{structsnake_a0c9c64051e2b17231cfab2815c0c329d}} 
 \index{snake\_t@{snake\_t}!y\_snake\_pos@{y\_snake\_pos}}
 \index{y\_snake\_pos@{y\_snake\_pos}!snake\_t@{snake\_t}}
 \doxysubsubsection{\texorpdfstring{y\_snake\_pos}{y\_snake\_pos}}
 {\footnotesize\ttfamily int snake\+\_\+t\+::y\+\_\+snake\+\_\+pos}
 
-
+The Y-\/coordinate of the snake\textquotesingle{}s position. 
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
